fix: icono cuenta visible

--- a/static/style.css
+++ b/static/style.css
@@ -293,7 +293,7 @@ justify-content:center;
     transition:all .3s ease;
 }
 
-.login i{
+.login-icon{
     color:#ffffff;
 }
 
